[2022-46] Started app to create features

--- a/src/revised_case_normalization/Hirslanden_Aarau_2017_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2017_normalization.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "a4e2885d",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Revised case normalization for Hirslanden Aarau 2017\n",
@@ -23,7 +26,8 @@
      "outputs_hidden": false
     },
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -46,6 +50,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -72,6 +79,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -446,7 +456,10 @@
    "cell_type": "markdown",
    "id": "a6796573",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Match revised DtoD data with the BfS data from the database"
@@ -456,7 +469,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "65408537-cd4a-4b7c-a785-0db424378909",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -512,6 +529,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -524,7 +544,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "a85b9247-c1dc-4072-a1dd-7b61c8251eeb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -548,6 +572,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -746,6 +773,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
