[2022-49][FIX] Refactored Code to read features into DB.

--- a/src/revised_case_normalization/USZ_2019_normalization.ipynb
+++ b/src/revised_case_normalization/USZ_2019_normalization.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "a4e2885d",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Revised case normalization for Universitätsspital Zürich 2019\n",
@@ -25,7 +28,8 @@
      "outputs_hidden": false
     },
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -51,6 +55,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -77,6 +84,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -412,7 +422,10 @@
    "cell_type": "markdown",
    "id": "a6796573",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Match revised DtoD data with the BfS data from the database"
@@ -422,7 +435,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "65408537-cd4a-4b7c-a785-0db424378909",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -610,6 +627,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1017,7 +1037,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "a85b9247-c1dc-4072-a1dd-7b61c8251eeb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1041,6 +1065,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -1212,6 +1239,9 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
